--- a/styles/google-homepage.css
+++ b/styles/google-homepage.css
@@ -1,5 +1,13 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 html{
+    font-family: monospace;
     background: white;
+    margin: 0px;
+    padding: 0px;
 }
 img{
     display: block;
@@ -20,6 +28,9 @@ input{
     height: 4%;
     border-radius: 300px;
 }  
+input:hover{
+    box-shadow: 0px 4px 5px grey;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -74,5 +85,21 @@ ul {
   }
 
   button:hover{
-      background-color: yellow;
+      background-color: grey;
+  }
+
+  footer{
+      background-color: grey;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;  
+  }
+
+  #footer-text{
+      display: block;
+      padding: 10px;
+      text-align: center;
+      color: white;
+      
   }
